--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "paths": {
       "@/components/*": ["src/components/*"],
       "@/server/*": ["src/server/*"],
+      "@/env/*": ["src/env/*"],
       "@/types/*": ["src/types/*"],
+      "@/pages/*": ["src/pages/*"],
       "@/utils/*": ["src/utils/*"]
     }
   },
